# solo

./: .env  .gitignore  README.md  deploy.sh  secrets.enc.yaml
frontend/: Dockerfile  deploy.sh  nginx.conf
frontend/www/: index.html  site.webmanifest
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  frontend.yaml  ingress.yaml  service.yaml  signalling.yaml
signalling-server/: Cargo.toml  Dockerfile  README.md  deploy.sh
signalling-server/src/: main.rs
